# kiro2chat

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_CN.md  TODO.md  kiro2chat.sh  kiro2chat@.service  pyproject.toml  run.sh  supervisor.sh
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  KIRO_API_NOTES.md
src/: __init__.py  _tool_names.py  agent.py  app.py  config.py  config_manager.py  log.py  log_context.py  metrics.py  stats.py  webui.py
src/adapters/: telegram.py
src/api/: agent_routes.py  anthropic_routes.py  routes.py
src/bot/: telegram.py
src/core/: __init__.py  client.py  converter.py  eventstream.py  health.py  sanitizer.py  token_counter.py
src/kiro2chat/: __init__.py  agent.py  app.py  config.py  config_manager.py  webui.py
src/kiro2chat/api/: agent_routes.py  routes.py
src/kiro2chat/bot/: telegram.py
src/kiro2chat/core/: __init__.py  client.py  converter.py  eventstream.py
src/webui/: __init__.py  chat.py  monitor.py  settings.py
tests/: __init__.py  test_acp_client.py  test_bridge.py  test_converter.py  test_e2e.py  test_routes.py  test_sanitizer.py  test_token_counter.py
