[project]
name = "kiro2chat"
dynamic = ["version"]
description = "Kiro to Chat - OpenAI-compatible API powered by Kiro/CodeWhisperer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.25.0",
    "fastapi>=0.129.0",
    "gradio>=6.5.1",
    "httpx>=0.28.1",
    "litellm>=1.81.10",
    "python-dotenv>=1.2.1",
    "strands-agents>=1.26.0",
    "strands-agents-tools>=0.2.20",
    "tomli-w>=1.0.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
kiro2chat = "kiro2chat.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiro2chat"]

[tool.hatch.version]
path = "src/kiro2chat/__init__.py"

[tool.uv]
package = true
