[project]
name = "kiro2chat"
dynamic = ["version"]
description = "Kiro to Chat - OpenAI-compatible API powered by Kiro/CodeWhisperer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "python-dotenv>=1.2.1",
    "aiogram>=3.25.0",
    "gradio>=6.5.1",
    "httpx>=0.28.1",
    "loguru>=0.7.0",
    "openai>=1.0.0",
    "prometheus-client>=0.20.0",
    "strands-agents>=1.26.0",
    "strands-agents-tools>=0.2.20",
    "tiktoken>=0.7.0",
    "tomli-w>=1.0.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
kiro2chat = "src.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
path = "src/__init__.py"

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
