[project]
name = "kiro2chat"
dynamic = ["version"]
description = "Bridge kiro-cli to chat platforms via ACP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "aiogram>=3.25.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
kiro2chat = "src.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
path = "src/__init__.py"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
